syntax = "proto3";

option go_package = "github.com/valkyraycho/bank_project/pb";

package pb;

import "google/protobuf/timestamp.proto";

message User {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string role = 4;
    google.protobuf.Timestamp password_changed_at = 5;
    google.protobuf.Timestamp created_at = 6;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string full_name = 3;
    string email = 4;
}

message CreateUserResponse {
    User user = 1;
}

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    User user = 1;
    string session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expires_at = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}

message UpdateUserRequest {
    int64 id = 1;
    optional string username = 2;
    optional string password = 3;
    optional string full_name = 4;
    optional string email = 5;
}

message UpdateUserResponse {
    User user = 1;
}